# SukiSU_KernelPatch_patch

./: .gitignore  README.md  build.sh  install_tools.sh  kallsym.c
.github/workflows/: build.yml  build_test.yml
kernel/: Makefile  kpimg.lds
kernel/base/: setup.c  start.c
kernel/linux/arch/arm64/include/asm/: elf.h
kernel/linux/include/linux/: rcupdate.h
kernel/linux/include/linux/sched/: task.h
kernel/patch/: patch.c
kernel/patch/ksyms/: execv.c
kernel/patch/module/: module.c  relo.c
kernel/patch/sukisu/: sukisu.c
patch/: CMakeLists.txt  build.sh  encrypt  kpimg
patch/include/: kpimg_enc.h  kptools_android.h
patch/res/: kpimg  kpimg.enc  kptools-android  kptools-linux
patch_build/: CMakeLists.txt
patch_build/build-android/: CMakeCache.txt  Makefile  cmake_install.cmake
patch_build/build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
patch_build/build-linux/include/: kpimg_enc.h
patch_build/include/: kptools_android.h
patch_build/res/: kptools-android
tools/: .gitignore  CMakeLists.txt  Makefile  common.h  kallsym.c  kallsym.h  kptools.c  patch.c  preset.h
